--- a/src/app/pages/film-details/film-details.page.html
+++ b/src/app/pages/film-details/film-details.page.html
@@ -5,10 +5,10 @@
     </ion-buttons>
     <ion-title>{{ film?.title }}</ion-title>
     <ion-buttons slot="end">
-      <ion-button>
+      <ion-button (click)="unfavouriteFilm()" *ngIf="isFavourite">
         <ion-icon name="star" slot="icon-only" color="secondary"></ion-icon>
       </ion-button>
-      <ion-button>
+      <ion-button (click)="favouriteFilm()" *ngIf="!isFavourite">
         <ion-icon name="star-outline" slot="icon-only" color="secondary"></ion-icon>
       </ion-button>
     </ion-buttons>
